--- a/dev/com.ibm.ws.microprofile.reactive.streams.operators_fat/.classpath
+++ b/dev/com.ibm.ws.microprofile.reactive.streams.operators_fat/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="test-applications/ReactiveStreamsTest/src"/>
 	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/Users/hutchig/.m2/repository/com/ibm/ws/io/smallrye/reactive/smallrye-reactive-streams-operators/0.4.1-SNAPSHOT/smallrye-reactive-streams-operators-0.4.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
