Changes that allow FATs to pass

--- a/dev/com.ibm.ws.io.reactivex.rxjava2/.project
+++ b/dev/com.ibm.ws.io.reactivex.rxjava2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ibm.websphere.io.reactivex.rxjava2.1.0</name>
+	<name>com.ibm.ws.io.reactivex.rxjava2</name>
 	<comment></comment>
 	<projects>
 	</projects>
